--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
   "author": "Hank",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "chai": "^3.5.0",
+    "chai-api": "^1.0.2",
+    "chai-mongo": "^1.0.0",
     "co": "^4.6.0",
     "co-nextware": "^1.0.1",
     "ejs": "^2.3.4",
